draft relational slides

--- a/lectures/makefile
+++ b/lectures/makefile
@@ -2,7 +2,8 @@
 PANOPTS := -V center=false -V history=false -V revealjs-url=../reveal.js --template=template.html
 #BIBOPTS := --bibliography refs.bib --filter pandoc-citeproc
 
-all: 1_introduction/1_introduction.html
+all: 1_introduction/1_introduction.html \
+	   2_relationalmodel/2_relationalmodel.html
 
 %.html: %.md template.html 
 	pandoc -s -t revealjs $(PANOPTS) $(BIBOPTS) -o $@ $<
