--- a/labs/makefile
+++ b/labs/makefile
@@ -2,6 +2,9 @@
 
 HEADER := intro.md
 
+lab1.pdf: lab1.md
+	pandoc -t latex -o $@ $<
+
 %.pdf: %.md $(HEADER)
 	cat $(HEADER) $< | pandoc -t latex -o $@
 
