--- a/lectures/makefile
+++ b/lectures/makefile
@@ -1,9 +1,10 @@
 
-PANOPTS := -V center=false -V history=false -V revealjs-url=../reveal.js --template=template.html
-#BIBOPTS := --bibliography refs.bib --filter pandoc-citeproc
+PANOPTS := --no-highlight -V center=false -V history=false -V revealjs-url=../reveal.js --template=template.html
+BIBOPTS := --bibliography refs.bib --filter pandoc-citeproc
 
 all: 1_introduction/1_introduction.html \
-	   2_relationalmodel/2_relationalmodel.html
+	   2_relationalmodel/2_relationalmodel.html \
+	   3_sql/3_sql.html
 
 %.html: %.md template.html 
 	pandoc -s -t revealjs $(PANOPTS) $(BIBOPTS) -o $@ $<
