enable hardware accelarated encoding

--- a/recordings/Makefile
+++ b/recordings/Makefile
@@ -5,6 +5,5 @@ MP4S := $(MKVS:%.mkv=%.mp4)
 all: $(MP4S)
 
 %.mp4: %.mkv
-	ffmpeg -i $< -af afftdn $@
-	#ffmpeg -i $< -codec copy $@
+	ffmpeg -hwaccel vaapi -hwaccel_output_format vaapi -hwaccel_device /dev/dri/renderD128 -i $< -c:v h264_vaapi -af afftdn $@
 
