--- a/labs/makefile
+++ b/labs/makefile
@@ -1,8 +1,8 @@
 
 
-LABS := lab1.pdf lab2.pdf lab3.pdf
+LABS := lab1.pdf lab2.pdf lab3.pdf lab4.pdf
 
-all: $(LABS)
+all: $(LABS) FAQ.pdf
 
 .PHONY := all
 
