--- a/lectures/makefile
+++ b/lectures/makefile
@@ -6,7 +6,8 @@ all: 1_introduction/1_introduction.html \
 	   2_relationalmodel/2_relationalmodel.html \
 	   3_sql/part1.html 3_sql/part2.html 3_sql/part3.html \
 		 4_design/principles.html 4_design/practical.html \
-		 5_views/views.html
+		 5_views/views.html \
+		 6_integrity/integrity.html
 
 %.html: %.md template.html 
 	pandoc -s -t revealjs $(PANOPTS) $(BIBOPTS) -o $@ $<
