--- a/lectures/makefile
+++ b/lectures/makefile
@@ -11,7 +11,8 @@ all: 1_introduction/1_introduction.html \
 		 7_optimisation/optimisation.html \
 		 8_recovery/recovery.html \
 		 9_concurrency/concurrency.html \
-		 10_security/security.html
+		 10_security/security.html \
+		 11_oodb/oodb.html
 
 %.html: %.md template.html 
 	pandoc -s -t revealjs $(PANOPTS) $(BIBOPTS) -o $@ $<
