--- a/lectures/makefile
+++ b/lectures/makefile
@@ -12,7 +12,8 @@ all: 1_introduction/1_introduction.html \
 		 8_recovery/recovery.html \
 		 9_concurrency/concurrency.html \
 		 10_security/security.html \
-		 11_oodb/oodb.html
+		 11_oodb/oodb.html \
+		 12_orm/orm.html
 
 %.html: %.md template.html 
 	pandoc -s -t revealjs $(PANOPTS) $(BIBOPTS) -o $@ $<
