--- a/lectures/makefile
+++ b/lectures/makefile
@@ -1,5 +1,5 @@
 
-PANOPTS := --no-highlight -V center=false -V history=false -V revealjs-url=../reveal.js --template=template.html
+PANOPTS := --mathjax --no-highlight -V center=false -V history=false -V revealjs-url=../reveal.js --template=template.html
 BIBOPTS := --bibliography refs.bib --filter pandoc-citeproc
 
 all: 1_introduction/1_introduction.html \
